<resources>
    <string name="app_name">SignInSignUpApp</string>

        <!-- Main Activity -->
    <string name="sign_in_prompt">Choose a Sign In Method</string>
    <string name="sign_up_prompt">Sign up for an Account</string>
    <string name="register">Sign Up</string>
    <string name="forgot_password">Recover a Password</string>


    <!-- Custom Sign in Dialog -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="null_username">Please provide a username</string>
    <string name="null_password">Please provide a password</string>
    <string name="incorrect_password">Incorrect password</string>

    <!-- Register layout -->
    <string name="retype_password">Retype password</string>

    <!-- Menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Signout</string>
    <string name="menu_help">Help</string>

    <!-- Custom Forgot Password dialog -->
    <string name="new_password">Enter your email for instructions to reset password.</string>
    <string name="send_email">Send email</string>


</resources>
